--- a/application/admin/view/Base/imgupload.html
+++ b/application/admin/view/Base/imgupload.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!-- 引用控制层插件样式 -->
+<link rel="stylesheet" href="__JS__/imgupload/control/css/zyUpload.css" type="text/css">
+<!--图片弹出层样式 必要样式-->
+<script type="text/javascript" src="__JS__/imgupload/jquery-1.7.2.js"></script>
+<!-- 引用核心层插件 -->
+<script type="text/javascript" src="__JS__/imgupload/core/zyFile.js"></script>
+<!-- 引用控制层插件 -->
+<script type="text/javascript" src="__JS__/imgupload/control/js/zyUpload.js"></script>
+<script type="text/javascript" src="__PUBLIC__/layui/layui.js"></script>
