--- a/application/admin/view/Info/detail001.html
+++ b/application/admin/view/Info/detail001.html
@@ -445,7 +445,7 @@
                     data.elem.value = 0;
                 }
             });
-            form.on('checkbox(bloodcheck)', function(data){
+            form.on('checkbox(boldcheck)', function(data){
                 console.log(data.elem.checked);
                 console.log(data.elem.value);
                 if(data.elem.checked){
