--- a/application/admin/view/Info/search.html
+++ b/application/admin/view/Info/search.html
@@ -9,7 +9,7 @@
     <div class="layui-body layui-form">
         <div class="layui-tab marg0" lay-filter="bodyTab" id="top_tabs_box">
             <ul class="layui-tab-title top_tab" id="top_tabs">
-                <li class="layui-this" lay-id=""><i class="iconfont icon-computer"></i> <cite id="switch_left">信息管理</cite></li>
+                <li class="layui-this" lay-id=""><i class="iconfont icon-computer"></i> <cite id="switch_left">信息管理查询</cite></li>
             </ul>
             <div class="layui-tab-content clildFrame">
                 <div class="layui-tab-item layui-show">
@@ -17,10 +17,12 @@
                         <!--内容主体-->
                         <blockquote class="layui-elem-quote news_search">
                             <div class="layui-inline">
-                                <div class="layui-input-inline">
-                                    <input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
-                                </div>
-                                <a class="layui-btn search_btn">查询</a>
+                                <form action="{:url('admin/Info/searchInfo')}" method="post">
+                                    <div class="layui-input-inline">
+                                        <input type="text" value="" placeholder="请输入关键字" class="layui-input search_input" name="title">
+                                    </div>
+                                    <button type="submit" class="layui-btn search_btn">查询</button>
+                                </form>
                             </div>
                             <div class="layui-inline">
                                 <a class="layui-btn layui-btn-normal" href="{:url('admin/info/addNews')}">发布消息</a>
@@ -81,7 +83,7 @@
                                         {$vo.top == 1 ? '置顶':''}
                                         {$vo.star==1 ? '星级':''}
                                         {$vo.red ==1 ? '套红':''}
-                                        {$vo.blood ==1 ? '加粗':''}
+                                        {$vo.bold ==1 ? '加粗':''}
                                     </td>
                                     <td>{$vo.ip}</td>
                                     <td>{$vo.update_time|date="y-m-d h:i:s",###}</td>
