--- a/application/admin/view/Admin/admin.html
+++ b/application/admin/view/Admin/admin.html
@@ -9,7 +9,7 @@
     <div class="layui-body layui-form">
         <div class="layui-tab marg0" lay-filter="bodyTab" id="top_tabs_box">
             <ul class="layui-tab-title top_tab" id="top_tabs">
-                <li class="layui-this" lay-id=""><i class="iconfont icon-computer"></i> <cite id="switch_left">用户列表</cite></li>
+                <li class="layui-this" lay-id=""><i class="iconfont icon-computer"></i> <cite id="switch_left">管理员列表</cite></li>
             </ul>
             <div class="layui-tab-content clildFrame">
                 <div class="layui-tab-item layui-show">
@@ -17,13 +17,15 @@
                         <!--内容主体-->
                         <blockquote class="layui-elem-quote news_search">
                             <div class="layui-inline">
-                                <div class="layui-input-inline">
-                                    <input type="text" value="" placeholder="请输入关键字" class="layui-input search_input">
-                                </div>
-                                <a class="layui-btn search_btn">查询</a>
+                                <form action="{:url('admin/Admin/searchAdmin')}" method="post">
+                                    <div class="layui-input-inline">
+                                        <input type="text" value="" placeholder="请输入关键字" class="layui-input search_input" name="user">
+                                    </div>
+                                    <button type="submit" class="layui-btn search_btn">查询</button>
+                                </form>
                             </div>
                             <div class="layui-inline">
-                                <a class="layui-btn layui-btn-normal" href="{:url('admin/info/addNews')}">发布消息</a>
+                                <a class="layui-btn layui-btn-normal" href="{:url('admin/admin/addList')}">添加管理员</a>
                             </div>
                             <!--<div class="layui-inline">-->
                                 <!--<a class="layui-btn recommend" style="background-color:#5FB878">推荐文章</a>-->
@@ -55,11 +57,11 @@
                                         <div class="layui-unselect layui-form-checkbox" lay-skin="primary"><i
                                                 class="layui-icon"></i></div>
                                     </th>
-                                    <th style="text-align:left;">用户昵称</th>
+                                    <th style="text-align:left;">管理员名称</th>
                                     <th>手机号</th>
-                                    <th>code_id</th>
-                                    <th>金币数</th>
-                                    <th>用户等级</th>
+                                    <th>等级</th>
+                                    <th>上次登录时间</th>
+                                    <th>上次登录ip</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
@@ -70,17 +72,17 @@
                                         <div class="layui-unselect layui-form-checkbox" lay-skin="primary"><i
                                                 class="layui-icon"></i></div>
                                     </td>
-                                    <td align="left"><a href="">{$vo.username}</a></td>
+                                    <td align="left"><a href="">{$vo.user}</a></td>
                                     <td>{$vo.phone}</td>
                                     <td>
-                                        {$vo.code_id}
+                                        {$vo.level|countUserLevel}
                                     </td>
                                     <td>
-                                        {$vo.gold_coin}
+                                        {$vo.last_time|date='Y-m-d H:i:s',###}
                                     </td>
-                                    <td>{$vo.level|countUserLevel}</td>
+                                    <td>{$vo.last_ip}</td>
                                     <td>
-                                        <a class="layui-btn layui-btn-mini" href="{:url('admin/User/detail')}/{$vo.id}"><i class="iconfont icon-edit"></i> 编辑</a>
+                                        <a class="layui-btn layui-btn-mini" href="{:url('admin/Admin/updateList')}/{$vo.id}"><i class="iconfont icon-edit"></i> 编辑</a>
                                         <button class="layui-btn layui-btn-danger layui-btn-mini del" data-userid="{$vo.id}"><i
                                                 class="layui-icon"></i>删除
                                         </button>
