--- a/application/admin/view/Admin/login.html
+++ b/application/admin/view/Admin/login.html
@@ -1,36 +1,97 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>登录--layui后台管理模板</title>
-	<meta name="renderer" content="webkit">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="../../layui/css/layui.css" media="all" />
-	<link rel="stylesheet" href="../../css/login.css" media="all" />
-</head>
+{include file="Base/header" /}
+<style>
+    body {
+        overflow: hidden;
+    }
+
+    .video-player {
+        background-color: transparent;
+        min-width: 100%;
+        min-height: 100%;
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+    }
+
+    .video_mask {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 90;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .login {
+        height: 260px;
+        width: 260px;
+        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.5);
+        border-radius: 4px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin: -150px 0 0 -150px;
+        z-index: 99;
+    }
+
+    .login h1 {
+        text-align: center;
+        color: #fff;
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .form_code {
+        position: relative;
+    }
+
+    .form_code .code {
+        position: absolute;
+        right: 0;
+        top: 1px;
+        cursor: pointer;
+    }
+
+    .login_btn {
+        width: 100%;
+    }
+</style>
 <body>
-	<div class="video_mask"></div>
-	<div class="login">
-	    <h1>盘店招工管理登录</h1>
-	    <form class="layui-form">
-	    	<div class="layui-form-item">
-				<input class="layui-input" name="username" placeholder="用户名" lay-verify="required" type="text" autocomplete="off">
-		    </div>
-		    <div class="layui-form-item">
-				<input class="layui-input" name="password" placeholder="密码" lay-verify="required" type="password" autocomplete="off">
-		    </div>
-		    <div class="layui-form-item form_code">
-				<input class="layui-input" name="code" placeholder="验证码" lay-verify="required" type="text" autocomplete="off">
-				<div class="code"><img src="../../images/code.jpg" width="116" height="36"></div>
-		    </div>
-			<button class="layui-btn login_btn" lay-submit="" lay-filter="login">登录</button>
-		</form>
-	</div>
-	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="login.js"></script>
+<div class="video_mask"></div>
+<div class="login">
+    <h1>盘店招工管理登录</h1>
+    <form class="layui-form" action="{:url('admin/admin/checkAdmin')}" method="post">
+        <div class="layui-form-item">
+            <input class="layui-input" name="admin" placeholder="用户名" lay-verify="required" type="text">
+        </div>
+        <div class="layui-form-item">
+            <input class="layui-input" name="password" placeholder="密码" lay-verify="required" type="password">
+        </div>
+        <div class="layui-form-item form_code">
+            <input class="layui-input" name="captcha" placeholder="验证码" lay-verify="required"type="text">
+            <div class="code"><img id="verify_img" src="{:captcha_src()}" width="116" height="36" alt="验证码"
+                                   onclick="refreshVerify()"></div>
+        </div>
+        <button class="layui-btn login_btn" lay-submit="" lay-filter="loginBtn">登录</button>
+        <span>如果多次提示验证码错误请手动点击一下</span>
+    </form>
+</div>
 </body>
-</html>
+{include file="Base/footer" /}
+<script>
+    function refreshVerify() {
+        var ts = Date.parse(new Date()) / 1000;
+        $('#verify_img').attr("src", "/captcha?id=" + ts);
+    }
+    $(function () {
+        layui.use(['layer', 'form', 'laydate'], function() {
+            var layer = layui.layer
+                , form = layui.form();
+            refreshVerify();
+        });
+
+    });
+</script>
